Summary of important user-visible changes for ncArray 1.0.2:
------------------------------------------------------------

 ** new function: nansum, nanvar, nanstd: mean, variance, standard deviation
    ignoring NaNs
 ** ncarray nows depends on package netcdf (instead of octcdf)
 ** Add missing dependency to statistics

Summary of important user-visible changes for ncArray 1.0.1:
------------------------------------------------------------

 ** new function: nanmean: mean ignoring NaNs
 ** new function: load: load data based on a coordinate range or a single 
    value (only 1-dimensional coordinates are currently supported)
 ** CACHED_DECOMPRESS_DIR defaults now to a directory inside the system temporary 
    directory (/tmp on Linux)
 ** add support for xz compression
 ** optimization of assignement operator
 ** add units and standard_name in nccoord

Summary of important user-visible changes for ncArray 1.0.0:
------------------------------------------------------------

 ** Initial release